# 2gether

./: .gitattributes  .gitignore  README.md
.github/workflows/: core.yml
core/: CMakeLists.txt
core/include/core/: EventStore.h
core/src/: EventStore.cpp
core/tests/: test_event_store.cpp
docs/: ARCHITECTURE.md  PERMISSIONS.md  ROADMAP.md
